# Latex-VM

./: .gitignore  .pre-commit-config.yaml  README.md  expression.py  graph_session.py  main.py  pyproject.toml  python_parse_test.py  sonar-project.properties  tox.ini  type_defs.py
.github/workflows/: build.yml
latexvm/: expression.py  graph_session.py
src/: expression.py  graph_session.py  main.py  type_defs.py
tests/: conftest.py  test_assignment.py  test_env.py  test_expression.py  test_force_resolve.py  test_functions.py  test_packing.py  test_simplifying.py  test_statements.py
