[tool.poetry]
name = "deezmozevaluator"
version = "0.1.0"
description = ""
authors = ["Ochawin Apichattakul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
sympy = "^1.11.1"
antlr4-python3-runtime = "4.10"
pytest = "^7.2.2"
pre-commit = "^3.1.1"
pytest-cov = "^4.0.0"
timeout-decorator = "^0.5.0"
pytest-xdist = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
